Better multi module handling and other changes (#47)
* major changes

- better maven support
- decrease startup time
- fixed inlay hints constructors
- fixed slf4j log causing false errors
- fixed tab/colum offsets causing misplaced inlay hints and other issues

todo: refine multi maven support

* try proc=none

* fixes

- revert documentsymbol to its initial state
- handle maven mvnd home better
- kill jls subprocesses on exit
- execute mvn sub process on background for multi modules
- cache classpath by fingerprint for many modules
- fix record field warnings

* cleanup

* remove compile phase (needs manual compile)

* fixed location helper navigating to comments instead of actual code location

* dont wait for type index readiness for signature and hover

* Fixed lombok field warnings (dont show)

* fixed completion optional<?> missing

* lombok utility helper

* remove redundant index merge after full rebuild

* Changes

- filter reference to package-private, private (increased lookup)
- handle multi modules better (resolving, caching, speed up)

* pure cleanup (simplify javalanguageserver)

* jit profile

* reduce memory on index parsing

* lombok stub injector

* fixed lombok reference with stubs

---------

Co-authored-by: Delice0 <59118341+Delice0@users.noreply.github.com>